--- a/App/Views/Layouts/Default.html.twig
+++ b/App/Views/Layouts/Default.html.twig
@@ -387,6 +387,10 @@
         }
 
 
+        .forno {
+            background-size: 95% !important;
+        }
+
         .forno-desligado {
             background: url('/assets/images/forno.png') no-repeat center center #000;
         }
@@ -395,6 +399,100 @@
             background: url('/assets/images/forno-acesso.png') no-repeat center center #000;
         }
 
+        .form-range {
+            -webkit-appearance: none; /* Remove o estilo padrão no Chrome/Safari */
+            width: 100%;
+            height: 6px;
+            background: #ddd;
+            border-radius: 5px;
+            outline: none;
+        }
+
+        .form-range::-webkit-slider-runnable-track {
+            background: #ccc;
+            height: 6px;
+            border-radius: 5px;
+        }
+
+        .form-range::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: #4CAF50;
+            cursor: pointer;
+            margin-top: -6px; /* Centraliza com a barra */
+            box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+        }
+
+        .form-range::-moz-range-track {
+            background: #ccc;
+            height: 6px;
+            border-radius: 5px;
+        }
+
+        .form-range::-moz-range-thumb {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: #4CAF50;
+            cursor: pointer;
+            border: none;
+        }
+
+        .form-range::-ms-track {
+            background: transparent;
+            border-color: transparent;
+            color: transparent;
+            height: 6px;
+        }
+
+        .form-range::-ms-fill-lower {
+            background: #ccc;
+            border-radius: 5px;
+        }
+
+        .form-range::-ms-fill-upper {
+            background: #ccc;
+            border-radius: 5px;
+        }
+
+        .form-range::-ms-thumb {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+
+        .form-range-ativo {
+            font-weight: bold !important;
+            color: #4CAF50 !important;
+        }
+
+        .btn-danger {
+            color: #fff;
+            border-color: #dc3545;
+            background: #bb2d3b;
+        }
+
+        .modal-title {
+            color: #fff;
+            font-size: .9rem !important;
+        }
+
+        .modal-header {
+            background: #000;
+        }
+
+        .modal-footer {
+            background: #eee;
+        }
+
+        .modal-footer .btn {
+            font-size: .9rem !important;
+        }
 
         @-webkit-keyframes spin {
             0% {
@@ -552,6 +650,11 @@
 
         }
     </style>
+    <script
+            crossorigin="anonymous"
+            integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    ></script>
 </head>
 <body
         class="relative flex items-top justify-center min-h-screen sm:items-center sm:pt-0"
@@ -561,10 +664,5 @@
 
     {% endblock %}
 </div>
-<script
-        crossorigin="anonymous"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-></script>
 </body>
 </html>
