--- a/App/Views/Layouts/Default.html.twig
+++ b/App/Views/Layouts/Default.html.twig
@@ -477,6 +477,12 @@
             background: #bb2d3b;
         }
 
+        .btn-primary {
+            color: #fff;
+            border-color: #0d6efd;
+            background: #0b5ed7;
+        }
+
         .modal-title {
             color: #fff;
             font-size: .9rem !important;
@@ -492,6 +498,14 @@
 
         .modal-footer .btn {
             font-size: .9rem !important;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        .ml-3 {
+            margin-left: 1rem;
         }
 
         @-webkit-keyframes spin {
